--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "source": "/api/trpc/:path*",
       "destination": "/api/trpc"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
