Convert to Vercel serverless function
- Create server/_core/app.ts: Express app factory
- Create api/index.ts: Vercel serverless function handler
- Update vercel.json: Configure serverless function routing
- Remove build:server from buildCommand (not needed for serverless)

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,21 @@
 {
-  "buildCommand": "pnpm build && pnpm build:server",
+  "buildCommand": "pnpm build",
   "installCommand": "pnpm install",
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "/api"
+    },
+    {
       "source": "/(.*)",
-      "destination": "/dist/index.js"
+      "destination": "/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/index.ts": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  }
 }
 
