Fix vercel.json: Set correct outputDirectory for static files
- Add outputDirectory: dist/public
- Fix API rewrite destination to /api/index
- Remove memory setting (deprecated)

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,15 @@
 {
   "buildCommand": "pnpm build",
   "installCommand": "pnpm install",
+  "outputDirectory": "dist/public",
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
+      "destination": "/api/index"
     }
   ],
   "functions": {
     "api/index.ts": {
-      "memory": 1024,
       "maxDuration": 10
     }
   }
