Fix Vercel deployment: Bundle API with esbuild
- Add build:api script to bundle api/index.ts with esbuild
- Update vercel.json to use bundled api/index.js instead of TypeScript
- This fixes ERR_MODULE_NOT_FOUND by including all dependencies in bundle
- Bundle size: 53.5kb

--- a/vercel.json
+++ b/vercel.json
@@ -13,9 +13,8 @@
     }
   ],
   "functions": {
-    "api/index.ts": {
-      "maxDuration": 10,
-      "includeFiles": "server/**"
+    "api/index.js": {
+      "maxDuration": 10
     }
   }
 }
