--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx watch server/_core/index.ts",
     "build": "vite build && pnpm build:api",
-    "build:api": "esbuild api/index.ts --platform=node --packages=external --bundle --format=esm --outfile=api/index.js --external:@vercel/node",
+    "build:api": "esbuild api/_index.ts --platform=node --packages=external --bundle --format=esm --outfile=api/index.js --external:@vercel/node",
     "build:server": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc --noEmit",
